# fastapi_assignment

./: main.py  pyproject.toml
app/models/: users.py
app/routers/: movies.py  users.py
app/schemas/: movies.py  users.py
app/utils/: jwt.py
